--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "firebase": "^9.18.0",
     "framer-motion": "^10.3.2",
     "install": "^0.13.0",
     "material-ui-rating": "^4.2.0",
