--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "npm": "^9.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-material-ui-carousel": "^3.4.2",
     "react-multi-carousel": "^2.8.2",
     "react-redux": "^8.0.5",
